[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/mob-ai/mob_ai.tscn" type="PackedScene" id=1]
[ext_resource path="res://entity/structure/moving-structure/raft/raft.tscn" type="PackedScene" id=2]
[ext_resource path="res://entity/unit/ground-unit/fox/fox.tscn" type="PackedScene" id=3]
[ext_resource path="res://entity/unit/ground-unit/fox/Textures/fox_diffuse_red.png" type="Texture" id=4]
[ext_resource path="res://entity/fox-on-raft/fox-on-raft.gd" type="Script" id=5]
[ext_resource path="res://addons/3d-marker/3d_marker.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/icon/fox.png" type="Texture" id=7]

[node name="fox-on-raft" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0 )
script = ExtResource( 5 )

[node name="fox_enemy" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.155204, 0 )
hood_texture = ExtResource( 4 )

[node name="3d_marker" parent="fox_enemy" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4071, 0 )
icon = ExtResource( 7 )
color = Color( 1, 0, 0, 1 )

[node name="mob_ai" parent="fox_enemy" instance=ExtResource( 1 )]
unit = NodePath("..")

[node name="raft" parent="." instance=ExtResource( 2 )]

[connection signal="hit_shore" from="raft" to="." method="_on_raft_hit_shore"]
